se agrega seccion de contacto con formulario

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
             <i class="large material-icons">filter_list</i>
         </a>
         <ul>
-            <li><a class="btn-floating">HOME</a></li>
-            <li><a class="btn-floating">MyWorld</a></li>
-            <li><a class="btn-floating">LetsTalk</a></li>
-            <li><a class="btn-floating">FavoriteCodes</a></li>
+            <li><a class="btn-floating" routerLink="" routerLinkActive="active">HOME</a></li>
+            <li><a class="btn-floating" routerLink="bio" routerLinkActive="active">MyWorld</a></li>
+            <li><a class="btn-floating" routerLink="conversemos" routerLinkActive="active">LetsTalk</a></li>
+            <li><a class="btn-floating" routerLink="favorites-codes" routerLinkActive="active">FavoriteCodes</a></li>
         </ul>
         </div>
     </div>
