--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -30,13 +30,13 @@
 
     <div class="row buttons-container">
         <div class="col s12 m2">
-            <button class='lined thin' data-target="modal1" id="myWorld">MyWorld</button>
+            <button class='lined thin' data-target="modal1" id="myWorld" routerLink="bio" routerLinkActive="active">MyWorld</button>
         </div>
         <div class="col s12 m3">
-            <button class='lined thin' data-toggle="modal" data-target="#myWorldModal" id="favoriteCodes">FavoriteCodes</button>
+            <button class='lined thin' data-toggle="modal" id="favoriteCodes" routerLink="favorites-codes" routerLinkActive="active">FavoriteCodes</button>
         </div>
         <div class="col s12 m2">
-            <button class='lined thin' href="#modal1" data-toggle="modal" data-target="#letsTalkModal" id="letsTalk">LetsTalk</button>
+            <button class='lined thin' href="#modal1" data-toggle="modal" routerLink="conversemos" routerLinkActive="active" id="letsTalk">LetsTalk</button>
         </div>
         
     </div>
