--- a/src/app/components/best-works/best-works.component.html
+++ b/src/app/components/best-works/best-works.component.html
@@ -1,11 +1,11 @@
 <div class="container" id="carruselContent">
     <div class="row">
         <div id="CARRUSEL" class="col s12 m12">
-            <div class="carousel">
+            <div class="carousel" #carousel>
                 <div class="carousel-item">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="./imgs/foodMap.jpeg" href="https://github.com/CaritoDasilva/pinterestChallenge"
+                        <img class="activator" src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/foodMap.jpeg?alt=media&token=e0191166-5e97-4e15-a3a5-61b756c89cfb" href="https://github.com/CaritoDasilva/pinterestChallenge"
                             target="_blank">
                         </div>
                         <div class="card-content">
@@ -24,7 +24,7 @@
                 <div class="carousel-item">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="./imgs/markdown.jpeg" href="https://github.com/CaritoDasilva/scl-2018-01-FE-markdown"
+                        <img class="activator" src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/markdown.jpeg?alt=media&token=5ae7a7cf-9d65-4e58-a2b5-da63eabf7297" href="https://github.com/CaritoDasilva/scl-2018-01-FE-markdown"
                             target="_blank">
                         </div>
                         <div class="card-content">
@@ -42,7 +42,7 @@
                 <div class="carousel-item">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="./imgs/pinterest.jpeg" href="https://github.com/CaritoDasilva/pinterestChallenge"
+                        <img class="activator" src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/pinterest.jpeg?alt=media&token=1e26e2b6-f809-49f0-9212-3cca6b3dd8a9" href="https://github.com/CaritoDasilva/pinterestChallenge"
                             target="_blank">
                         </div>
                         <div class="card-content">
