--- a/src/app/components/best-works/best-works.component.scss
+++ b/src/app/components/best-works/best-works.component.scss
@@ -1,15 +1,17 @@
 #CARRUSEL {
     margin-top: 10%;
     .carousel .carousel-item {
-        width: 300px;
-        height: 300px;
-        .card{
-            width: 100%;
-            height: 100%;
-        }
+      width: 400px;
+      height: 300px;
+      .card{
+          width: 100%;
+          height: 100%;
+          display: table;
+      }
     
     }
 }
+
 
 @media (min-width: 320px) and (max-width: 480px) {
 
