--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -5,28 +5,40 @@
             text-align: center;
             font-size: 35px;
             font-weight: bold;
+            margin-bottom: 5%;
         }
         p{
             font-family: 'IBM Plex Mono', monospace;
             text-align: justify;
             font-size: 16px;
+            margin-bottom: 0;
         }
-        .btn-container{
+        .rrss-container{
             display: flex;
-            justify-content: space-around;
-            .btn-floating.linkedin-icon{
-                border-radius: 7px;
-            }
-            .btn-floating.gmail-icon{
-                background-color: transparent;
-            }
-            .btn-floating.btn-cv{
-                margin: 2%;
-                img{
-                    width: 35px;
-                    height: 56px;
+            align-items: center;
+            .btn-container{
+                display: flex;
+                justify-content: space-around;
+                .btn-floating.linkedin-icon{
+                    border-radius: 7px;
+                }
+                .btn-floating.gmail-icon{
+                    background-color: transparent;
+                }
+                .btn-floating.btn-cv{
+                    margin: 2%;
+                    img{
+                        width: 35px;
+                        height: 56px;
+                    }
                 }
             }
+        }
+        .divider{
+            margin: 5% 0;
+        }
+        .text-invitation-form{
+            margin: 5% 0;
         }
     }
     .card-title{
@@ -40,6 +52,10 @@
         button{
             margin-bottom: 7%;
             margin-top: 5%;
+        }
+        .input-field input[type=text].invalid {
+            border-bottom: 1px solid #000;
+            box-shadow: 0 1px 0 0 #000;
         }
     }
 }
