se agregan titulos de secciones

--- a/src/app/components/best-works/best-works.component.html
+++ b/src/app/components/best-works/best-works.component.html
@@ -1,5 +1,8 @@
 <div class="container" id="carruselContent">
     <div class="row">
+        <div class="col m12 title-container">
+            <h1>MIS PROYECTOS</h1>
+        </div>
         <div id="CARRUSEL" class="col s12 m12">
             <div class="carousel" #carousel>
                 <div class="carousel-item">
