--- a/src/app/components/best-works/best-works.component.scss
+++ b/src/app/components/best-works/best-works.component.scss
@@ -1,5 +1,13 @@
+.title-container{
+  h1{
+    font-family: 'Vidaloka', serif;
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    margin: 4% 0;
+}
+}
 #CARRUSEL {
-    margin-top: 10%;
     .carousel .carousel-item {
       width: 400px;
       height: 300px;
