--- a/src/app/shared/menu-button/menu-button.component.html
+++ b/src/app/shared/menu-button/menu-button.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col s12 m1 offset-m11">
         <div class="fixed-action-btn toolbar" id="menu" #menu>
-            <a class="btn-floating btn-large">
+            <a class="btn-floating btn-large blueviolet">
                 <i class="large material-icons">filter_list</i>
             </a>
             <ul>
@@ -10,9 +10,7 @@
                 <li><a class="btn-floating" routerLink="/conversemos" routerLinkActive="active">LetsTalk</a></li>
                 <li><a class="btn-floating" routerLink="/favorites-codes" routerLinkActive="active">FavoriteCodes</a>
                 </li>
-                <li><a class="btn-floating" routerLink="/CaritoDaSilvaCV" routerLinkActive="active">Descarga CV</a></li>
             </ul>
         </div>
     </div>
 </div>
-<router-outlet></router-outlet>
