--- a/src/app/components/best-works/best-works.component.scss
+++ b/src/app/components/best-works/best-works.component.scss
@@ -1,10 +1,65 @@
 .title-container{
   h1{
-    font-family: 'Vidaloka', serif;
+    font-family: 'Nunito', sans-serif;
     text-align: center;
     font-size: 35px;
     font-weight: bold;
     margin: 4% 0;
+  }
+}
+
+.projects-container {
+  .project {
+    padding: 0 6vw
+  }
+  img {
+    border-radius: 16px;
+  }
+  .tags-container {
+
+    .tag {
+      background: #FF9AA4;
+      border-radius: 3px 0 0 3px;
+      color: #ffffff;
+      display: inline-block;
+      height: 26px;
+      line-height: 26px;
+      padding: 0 20px 0 23px;
+      position: relative;
+      margin: 0 10px 10px 0;
+      text-decoration: none;
+      -webkit-transition: color 0.2s;
+      
+      &.demo_link {
+        text-decoration: underline;
+
+      }
+    }
+    
+    .tag::before {
+      background: #ffcdd2;
+      border-radius: 10px;
+      box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+      content: '';
+      height: 6px;
+      left: 10px;
+      position: absolute;
+      width: 6px;
+      top: 10px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    }
+    
+    .tag::after {
+      background: #ffcdd2;
+      border-bottom: 13px solid transparent;
+      border-left: 10px solid #FF9AA4;
+      border-top: 13px solid transparent;
+      content: '';
+      position: absolute;
+      right: 0;
+      top: 0;
+    }    
+    
   }
 }
 #CARRUSEL {
@@ -33,6 +88,6 @@
     }
 
     #CARRUSEL {
-      margin-top: 27%;
+      margin-top: 10%;
     }
   }
