:lipstick: se arreglan estilos en responsives

--- a/src/app/components/best-works/best-works.component.html
+++ b/src/app/components/best-works/best-works.component.html
@@ -1,6 +1,6 @@
 <div class="best-projects-container">
     <div class="row">
-        <div class="col m12 title-container">
+        <div class="col m12 s12 title-container">
             <h1>MIS PROYECTOS</h1>
         </div>
         <!-- <div id="CARRUSEL" class="col s12 m12">
@@ -107,7 +107,8 @@
                     <li class="tag">Javascript</li>
                     <li class="tag">Express</li>
                     <li class="tag">MongoDB</li>
-                    <li><a href="https://www.bricofem.org/" class="tag demo_link" target="_blank">Code</a></li>
+                    <li><a href="https://github.com/CaritoDasilva/cenco_api_test" class="tag demo_link"
+                            target="_blank">Code</a></li>
                 </ul>
             </div>
             <div class="description-container">
@@ -127,9 +128,7 @@
                     </li>
                     <li><a href="https://github.com/CaritoDasilva/color-picker" class="tag demo_link"
                             target="_blank">Code</a></li>
-
                 </ul>
-
             </div>
             <div class="description-container">
 
