--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -17,6 +17,14 @@
           font-family: 'Nunito', sans-serif;
           font-size: 30px;
         }
+        @media (min-width: 320px) and (max-width: 767px) {
+          h1{
+            font-size: 35px;
+        }
+        h5 {
+          font-size: 20px;
+        }
+      }
         // .title-row{
         //     margin-top: 30px;
         //     .slide-top {
